making cofirmContent be on top of svg image to prevent overlappage

--- a/src/apps/content-editor/src/app/components/LockedItem/LockedItem.less
+++ b/src/apps/content-editor/src/app/components/LockedItem/LockedItem.less
@@ -14,7 +14,6 @@
       top: -40px;
       font-size: 14rem;
       opacity: 0.2;
-      // transform: rotate(-30deg);
     }
 
     .Header {
@@ -23,6 +22,7 @@
     }
     .ConfirmContent {
       padding-top: 64px;
+      position: relative;
       .ItemName {
         color: @zesty-orange;
       }
